--- a/鼎王/css/首頁.css
+++ b/鼎王/css/首頁.css
@@ -236,6 +236,7 @@ a.my-btn-goTop.show {
     white-space: nowrap;
     cursor: pointer;
     animation: liMove calc(var(--speed)) infinite;
+    text-align: center;
 }
 
 @keyframes move {
