--- a/鼎王/css/首頁.css
+++ b/鼎王/css/首頁.css
@@ -222,7 +222,9 @@ a.my-btn-goTop.show {
 }
 
 .g-container li {
-     margin: 0px auto;
+/*      margin: 0px auto; */
+    padding:0 10px 0 0;
+    text-align: center;
     flex-shrink: 0;
     width: 100%;
     padding-left: 10px;
